src/objects/LBI__PlayRun__c.object
<CustomObject>
    <fields>
        <fullName>LBI__Available__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Recommendations Available for this Play Run</description>
        <label>Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__ClosedOpportunities__c</fullName>
        <label>Closed Opportunities</label>
        <summarizedField>LBI__RecommendationOpportunitySummary__c.LBI__Closed__c</summarizedField>
        <summaryForeignKey>LBI__RecommendationOpportunitySummary__c.LBI__PlayRun__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LBI__DaysOld__c</fullName>
        <formula>ROUND(NOW() - LBI__RunDate__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DaysOld</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__Disqualified__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Disqualified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__Errors__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Recommendations Errored-out for this Play Run</description>
        <label>Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__Expired__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LBI__InProgress__c</fullName>
        <defaultValue>0</defaultValue>
        <label>In Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeWorkflowSetting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lattice Workflow Setting</label>
        <referenceTo>LBI__LatticeWorkflowSetting__c</referenceTo>
        <relationshipLabel>Lattice Play Runs</relationshipLabel>
        <relationshipName>LatticePlayRuns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__LaunchRunID__c</fullName>
        <label>Launch Run ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Open__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__OpportunityStatsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Stats Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__PendingOpportunities__c</fullName>
        <formula>LBI__Qualified__c - LBI__ClosedOpportunities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__PendingWork__c</fullName>
        <description>How many Recomendations left to be worked.</description>
        <formula>LBI__Available__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__PlayDescription__c</fullName>
        <formula>LBI__Play__r.LBI__Description__c</formula>
        <label>Play Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__PlayId__c</fullName>
        <label>Play Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__PlayName__c</fullName>
        <formula>LBI__Play__r.LBI__DisplayName__c</formula>
        <label>Play Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__PlayTypeName__c</fullName>
        <formula>LBI__Play__r.LBI__PlayType__r.LBI__PlayTypeName__c</formula>
        <label>Play Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Play__c</fullName>
        <label>Play</label>
        <referenceTo>LBI__Play__c</referenceTo>
        <relationshipName>PlayRuns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__Qualified__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Recommendations Qualified for this Play Run</description>
        <label>Qualified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__RunDate__c</fullName>
        <label>Launch Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LBI__StatsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Once a Play Run has had their final stats run (the final run is made when there are no more Recommendations with Work Pending) mark it as true</description>
        <label>Stats Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__Suppressed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Suppressed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Recommendations Retrieved for this Play</description>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lattice Play Run</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__Play__c</columns>
        <columns>LBI__PlayName__c</columns>
        <columns>LBI__PlayDescription__c</columns>
        <columns>LBI__RunDate__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LBI__Dashboard_180_Days</fullName>
        <columns>LBI__PlayName__c</columns>
        <columns>LBI__PlayTypeName__c</columns>
        <columns>LBI__Play__c</columns>
        <columns>LBI__Total__c</columns>
        <columns>LBI__Errors__c</columns>
        <columns>LBI__Available__c</columns>
        <columns>LBI__Qualified__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBI__DaysOld__c</field>
            <operation>lessOrEqual</operation>
            <value>180</value>
        </filters>
        <label>6 Months</label>
    </listViews>
    <listViews>
        <fullName>LBI__Dashboard_270_Days</fullName>
        <columns>LBI__PlayName__c</columns>
        <columns>LBI__PlayTypeName__c</columns>
        <columns>LBI__Play__c</columns>
        <columns>LBI__Total__c</columns>
        <columns>LBI__Errors__c</columns>
        <columns>LBI__Available__c</columns>
        <columns>LBI__Qualified__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBI__DaysOld__c</field>
            <operation>lessOrEqual</operation>
            <value>270</value>
        </filters>
        <label>9 Months</label>
    </listViews>
    <listViews>
        <fullName>LBI__Dashboard_30_Days</fullName>
        <columns>LBI__PlayName__c</columns>
        <columns>LBI__PlayTypeName__c</columns>
        <columns>LBI__Play__c</columns>
        <columns>LBI__Total__c</columns>
        <columns>LBI__Errors__c</columns>
        <columns>LBI__Available__c</columns>
        <columns>LBI__Qualified__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBI__DaysOld__c</field>
            <operation>lessOrEqual</operation>
            <value>30</value>
        </filters>
        <label>1 Month</label>
    </listViews>
    <listViews>
        <fullName>LBI__Dashboard_365_Days</fullName>
        <columns>LBI__PlayName__c</columns>
        <columns>LBI__PlayTypeName__c</columns>
        <columns>LBI__Play__c</columns>
        <columns>LBI__Total__c</columns>
        <columns>LBI__Errors__c</columns>
        <columns>LBI__Available__c</columns>
        <columns>LBI__Qualified__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBI__DaysOld__c</field>
            <operation>lessOrEqual</operation>
            <value>365</value>
        </filters>
        <label>1 Year</label>
    </listViews>
    <listViews>
        <fullName>LBI__Dashboard_60_Days</fullName>
        <columns>LBI__PlayName__c</columns>
        <columns>LBI__PlayTypeName__c</columns>
        <columns>LBI__Play__c</columns>
        <columns>LBI__Total__c</columns>
        <columns>LBI__Errors__c</columns>
        <columns>LBI__Available__c</columns>
        <columns>LBI__Qualified__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBI__DaysOld__c</field>
            <operation>lessOrEqual</operation>
            <value>60</value>
        </filters>
        <label>2 Months</label>
    </listViews>
    <listViews>
        <fullName>LBI__Dashboard_90_Days</fullName>
        <columns>LBI__PlayName__c</columns>
        <columns>LBI__PlayTypeName__c</columns>
        <columns>LBI__Play__c</columns>
        <columns>LBI__Total__c</columns>
        <columns>LBI__Errors__c</columns>
        <columns>LBI__Available__c</columns>
        <columns>LBI__Qualified__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBI__DaysOld__c</field>
            <operation>lessOrEqual</operation>
            <value>90</value>
        </filters>
        <label>3 Months</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{0000000}</displayFormat>
        <label>Play Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Play Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>